force-app/main/default/objects/Activity/fields/CreatedbyNameForm__c.field-meta.xml
<CustomField>
    <fullName>CreatedbyNameForm__c</fullName>
    <description>Formula created to use the full name of the user that created a task to approve the focus clients. This is used in the flow for accountplanning to show the avaiiable accountplans to approve.</description>
    <formula>CreatedBy.FullNameForm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Name</label>
    <type>Text</type>
</CustomField>