force-app/main/default/objects/Activity/fields/IsAccountplanningApproval__c.field-meta.xml
<CustomField>
    <fullName>IsAccountplanningApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created to have an extra indicator that the task is set to the approval process of the focus clients. We already created a type with &quot;Accountplanning&quot; but this can be used as a type in every task which could be not related to the approval process. Not displayed on the layout.</description>
    <label>Accountplanning Approval</label>
    <type>Checkbox</type>
</CustomField>