force-app/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type Actie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bellen</fullName>
            </value>
            <value>
                <fullName>Gesprek</fullName>
            </value>
            <value>
                <fullName>Mailen</fullName>
            </value>
            <value>
                <fullName>Deskresearch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>